exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint-cli2.jsonc-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint-cli2.toml-absolute-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint-cli2.toml-alternate-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint-cli2.toml-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint.json-absolute-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint.jsonc-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint.toml-absolute-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-.markdownlint.yaml-alternate-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config-nested-nested.json-/outer/inner-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 3 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config-nested.json-/nested-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 3 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config-nested.json-invalid-arg (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config.json--arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 3 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config.json-/extra-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 11 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir1/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir1/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config.json-/number-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 11 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir1/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir1/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-config.jsonc-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 3 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-invalid.markdownlint-cli2.jsonc-invalid-arg (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-invalid.markdownlint-cli2.mjs-invalid-arg (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-invalid.markdownlint.cjs-invalid-arg (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-invalid.markdownlint.mjs-invalid-arg (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-options-nested.yaml-/null-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 11 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "dir1/viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir1/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "dir1/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-files-options.toml-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 3 error(s)"
  ],
  "stderr": [
    "dir1/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "dir2/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-last-used-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 11 error(s)"
  ],
  "stderr": [
    "dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:4 error MD032/blanks-around-lists Lists should be surrounded by blank lines [Context: \\"1. List\\"]",
    "dir/about.md:5:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir/subdir/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > config-relative-module-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: viewme.md link.md",
    "Linting: 2 file(s)",
    "Summary: 8 error(s)"
  ],
  "stderr": [
    "link.md 3 MD039/no-space-in-links",
    "link.md 3 MD039/no-space-in-links",
    "link.md 3 MD059/descriptive-link-text",
    "viewme.md 3 any-blockquote",
    "viewme.md 3 MD009/no-trailing-spaces",
    "viewme.md 5 MD012/no-multiple-blanks",
    "viewme.md 12 MD019/no-multiple-space-atx",
    "viewme.md 14 MD047/single-trailing-newline"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > dotfiles-explicit (exec) 1`] = `
{
  "exitCode": 0,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: viewme.md dir/about.md .dir/about.md dir/subdir/info.md .dir/subdir/info.md dir/.subdir/info.md .dir/.subdir/info.md !**/viewme.md !**/about.md !**/info.md",
    "Linting: 0 file(s)",
    "Summary: 0 error(s)"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > dotfiles-explicit-literal (exec) 1`] = `
{
  "exitCode": 0,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: :viewme.md :dir/about.md :.dir/about.md :dir/subdir/info.md :.dir/subdir/info.md :dir/.subdir/info.md :.dir/.subdir/info.md !**/viewme.md !**/about.md !**/info.md",
    "Linting: 7 file(s)",
    "Summary: 0 error(s)"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > fix-last-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 2 error(s)"
  ],
  "stderr": [
    "dir/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "viewme.md:5 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > fix-multiple-arg (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 2 error(s)"
  ],
  "stderr": [
    "dir/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "viewme.md:5 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-cli2-jsonc-example (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [],
  "stderr": [
    "extended-ascii.md:1:9 error extended-ascii Only extended ASCII characters are allowed [Blocked character: '✅']",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-cli2-jsonc-number (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 1 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-cli2-mjs-invalid (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-cli2-yaml-invalid (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-cli2-yaml-mismatch-config (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > markdownlint-json-number (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 1 file(s)",
    "Summary: 5 error(s)"
  ],
  "stderr": [
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > modulePaths (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 5 file(s)",
    "Summary: 18 error(s)"
  ],
  "stderr": [
    "cjs: dir/about.md 1 MD021/no-multiple-space-closed-atx",
    "cjs: dir/about.md 1 MD021/no-multiple-space-closed-atx",
    "cjs: dir/about.md 4 MD032/blanks-around-lists",
    "cjs: dir/about.md 5 MD029/ol-prefix",
    "cjs: dir/hr.md 3 sample-rule-commonjs",
    "cjs: dir/link.md 3 MD039/no-space-in-links",
    "cjs: dir/link.md 3 MD039/no-space-in-links",
    "cjs: dir/link.md 3 MD059/descriptive-link-text",
    "cjs: dir/subdir/info.md 1 MD022/blanks-around-headings",
    "cjs: dir/subdir/info.md 1 MD041/first-line-heading/first-line-h1",
    "cjs: dir/subdir/info.md 2 MD038/no-space-in-code",
    "cjs: dir/subdir/info.md 2 MD038/no-space-in-code",
    "cjs: dir/subdir/info.md 4 MD012/no-multiple-blanks",
    "cjs: viewme.md 3 MD009/no-trailing-spaces",
    "cjs: viewme.md 5 MD012/no-multiple-blanks",
    "cjs: viewme.md 6 MD025/single-title/single-h1",
    "cjs: viewme.md 12 MD019/no-multiple-space-atx",
    "cjs: viewme.md 14 MD047/single-trailing-newline"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > no-config-ignore-only-violation (exec) 1`] = `
{
  "exitCode": 0,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: !viewme.md",
    "Linting: 0 file(s)",
    "Summary: 0 error(s)"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > no-config-ignore-violation (exec) 1`] = `
{
  "exitCode": 0,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: *.md !viewme.md",
    "Linting: 0 file(s)",
    "Summary: 0 error(s)"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > no-files-octothorpe (exec) 1`] = `
{
  "exitCode": 0,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: !",
    "Linting: 0 file(s)",
    "Summary: 0 error(s)"
  ],
  "stderr": [],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > outputFormatters (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 14 error(s)"
  ],
  "stderr": [
    "dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:4 error MD032/blanks-around-lists Lists should be surrounded by blank lines [Context: \\"1. List\\"]",
    "dir/about.md:5:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir/info.md:1 error MD041/first-line-heading/first-line-h1 First line in a file should be a top-level heading [Context: \\"## Information\\"]",
    "dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "dir/subdir/info.md:4 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:5 error MD012/no-multiple-blanks Multiple consecutive blank lines [Expected: 1; Actual: 2]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character",
    "fileName=\\"dir/about.md\\" lineNumber=1 columnNumber=3 ruleName=MD021/no-multiple-space-closed-atx ruleDescription=\\"Multiple spaces inside hashes on closed atx style heading\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md021.md errorContext=\\"#  About  #\\" errorDetail=\\"\\" errorSeverity=\\"error\\"",
    "fileName=\\"dir/about.md\\" lineNumber=1 columnNumber=10 ruleName=MD021/no-multiple-space-closed-atx ruleDescription=\\"Multiple spaces inside hashes on closed atx style heading\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md021.md errorContext=\\"#  About  #\\" errorDetail=\\"\\" errorSeverity=\\"error\\"",
    "fileName=\\"dir/about.md\\" lineNumber=4 ruleName=MD032/blanks-around-lists ruleDescription=\\"Lists should be surrounded by blank lines\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md032.md errorContext=\\"1. List\\" errorDetail=\\"\\" errorSeverity=\\"error\\"",
    "fileName=\\"dir/about.md\\" lineNumber=5 columnNumber=1 ruleName=MD029/ol-prefix ruleDescription=\\"Ordered list item prefix\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md029.md errorContext=\\"\\" errorDetail=\\"Expected: 2; Actual: 3; Style: 1/2/3\\" errorSeverity=\\"error\\"",
    "fileName=\\"dir/subdir/info.md\\" lineNumber=1 ruleName=MD022/blanks-around-headings ruleDescription=\\"Headings should be surrounded by blank lines\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md022.md errorContext=\\"## Information\\" errorDetail=\\"Expected: 1; Actual: 0; Below\\" errorSeverity=\\"error\\"",
    "fileName=\\"dir/subdir/info.md\\" lineNumber=1 ruleName=MD041/first-line-heading/first-line-h1 ruleDescription=\\"First line in a file should be a top-level heading\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md041.md errorContext=\\"## Information\\" errorDetail=\\"\\" errorSeverity=\\"error\\"",
    "fileName=\\"dir/subdir/info.md\\" lineNumber=2 columnNumber=7 ruleName=MD038/no-space-in-code ruleDescription=\\"Spaces inside code span elements\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md038.md errorContext=\\"\` code1\`\\" errorDetail=\\"\\" errorSeverity=\\"error\\"",
    "fileName=\\"dir/subdir/info.md\\" lineNumber=2 columnNumber=26 ruleName=MD038/no-space-in-code ruleDescription=\\"Spaces inside code span elements\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md038.md errorContext=\\"\`code2 \`\\" errorDetail=\\"\\" errorSeverity=\\"error\\"",
    "fileName=\\"dir/subdir/info.md\\" lineNumber=4 ruleName=MD012/no-multiple-blanks ruleDescription=\\"Multiple consecutive blank lines\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md012.md errorContext=\\"\\" errorDetail=\\"Expected: 1; Actual: 2\\" errorSeverity=\\"error\\"",
    "fileName=\\"viewme.md\\" lineNumber=3 columnNumber=10 ruleName=MD009/no-trailing-spaces ruleDescription=\\"Trailing spaces\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md009.md errorContext=\\"\\" errorDetail=\\"Expected: 0 or 2; Actual: 1\\" errorSeverity=\\"error\\"",
    "fileName=\\"viewme.md\\" lineNumber=5 ruleName=MD012/no-multiple-blanks ruleDescription=\\"Multiple consecutive blank lines\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md012.md errorContext=\\"\\" errorDetail=\\"Expected: 1; Actual: 2\\" errorSeverity=\\"error\\"",
    "fileName=\\"viewme.md\\" lineNumber=6 ruleName=MD025/single-title/single-h1 ruleDescription=\\"Multiple top-level headings in the same document\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md025.md errorContext=\\"Description\\" errorDetail=\\"\\" errorSeverity=\\"error\\"",
    "fileName=\\"viewme.md\\" lineNumber=12 columnNumber=4 ruleName=MD019/no-multiple-space-atx ruleDescription=\\"Multiple spaces after hash on atx style heading\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md019.md errorContext=\\"##  Summary\\" errorDetail=\\"\\" errorSeverity=\\"error\\"",
    "fileName=\\"viewme.md\\" lineNumber=14 columnNumber=14 ruleName=MD047/single-trailing-newline ruleDescription=\\"Files should end with a single newline character\\" ruleInformation=https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md047.md errorContext=\\"\\" errorDetail=\\"\\" errorSeverity=\\"error\\""
  ],
  "formatterCodeQuality": [
    "[",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD021/no-multiple-space-closed-atx\\",",
    "    \\"description\\": \\"MD021/no-multiple-space-closed-atx: Multiple spaces inside hashes on closed atx style heading\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"8a07df476b805f34574121021e7b9bafb39f201c8aff448fb2f0dcd44a71b16c\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"dir/about.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 1",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD021/no-multiple-space-closed-atx\\",",
    "    \\"description\\": \\"MD021/no-multiple-space-closed-atx: Multiple spaces inside hashes on closed atx style heading\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"8db764109451f15469798953956669835f36446059a4b6c686918f6eb10c6f49\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"dir/about.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 1",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD032/blanks-around-lists\\",",
    "    \\"description\\": \\"MD032/blanks-around-lists: Lists should be surrounded by blank lines\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"6ddd22f64c0a48e6b536677a9283be74fb75ad61a988efc543c1cbe6b0b3a3bb\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"dir/about.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 4",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD029/ol-prefix\\",",
    "    \\"description\\": \\"MD029/ol-prefix: Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"e072e957ba3f9e58988e049ed727269c61b5da8f768edd0608e5d54f48564531\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"dir/about.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 5",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD022/blanks-around-headings\\",",
    "    \\"description\\": \\"MD022/blanks-around-headings: Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below]\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"5161c78dcdb7c171057c40cdeb5d6c26f317475e1e8c549dd25c8d1ecd805b18\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"dir/subdir/info.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 1",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD041/first-line-heading/first-line-h1\\",",
    "    \\"description\\": \\"MD041/first-line-heading/first-line-h1: First line in a file should be a top-level heading\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"f6b546238b859746049d2548037a56ec760d1bb1631b15528ef74777976f0029\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"dir/subdir/info.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 1",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD038/no-space-in-code\\",",
    "    \\"description\\": \\"MD038/no-space-in-code: Spaces inside code span elements\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"fbc5ac854874d6d02f036e458d1cbb0299a6e50a8580cfcc9f5865b6597aa4e1\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"dir/subdir/info.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 2",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD038/no-space-in-code\\",",
    "    \\"description\\": \\"MD038/no-space-in-code: Spaces inside code span elements\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"2420f4c77ef1a8949845fe13032aa5e3771b9fc9df78be32650735f69115aabc\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"dir/subdir/info.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 2",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD012/no-multiple-blanks\\",",
    "    \\"description\\": \\"MD012/no-multiple-blanks: Multiple consecutive blank lines [Expected: 1; Actual: 2]\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"df47d6f9b7697c6afabe8ca956d32b96f083d63b5f98003e7ee07ac1139b3fa3\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"dir/subdir/info.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 4",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD009/no-trailing-spaces\\",",
    "    \\"description\\": \\"MD009/no-trailing-spaces: Trailing spaces [Expected: 0 or 2; Actual: 1]\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"f34a01e4a119d7df262993933665d4c97cc601702eeca2814ccad9606a3ccb48\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"viewme.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 3",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD012/no-multiple-blanks\\",",
    "    \\"description\\": \\"MD012/no-multiple-blanks: Multiple consecutive blank lines [Expected: 1; Actual: 2]\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"a3d9b647ce8d929904e64fbbb0a47223617e8985d0a4d31e674b22f919f736fb\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"viewme.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 5",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD025/single-title/single-h1\\",",
    "    \\"description\\": \\"MD025/single-title/single-h1: Multiple top-level headings in the same document\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"47cd7b74ada622add8ce464681102cb50f7fe2a685f3436327ae39c0f13ef1e6\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"viewme.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 6",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD019/no-multiple-space-atx\\",",
    "    \\"description\\": \\"MD019/no-multiple-space-atx: Multiple spaces after hash on atx style heading\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"399bbfaf6a26399d5927b93a23b6d18705bb380e90b3e3e85956de34a22c9c5b\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"viewme.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 12",
    "      }",
    "    }",
    "  },",
    "  {",
    "    \\"type\\": \\"issue\\",",
    "    \\"check_name\\": \\"MD047/single-trailing-newline\\",",
    "    \\"description\\": \\"MD047/single-trailing-newline: Files should end with a single newline character\\",",
    "    \\"severity\\": \\"minor\\",",
    "    \\"fingerprint\\": \\"bf74eade0ee3301ccaa826907651e0d6925b60d517e1110c29b081c7b6ce1acf\\",",
    "    \\"location\\": {",
    "      \\"path\\": \\"viewme.md\\",",
    "      \\"lines\\": {",
    "        \\"begin\\": 14",
    "      }",
    "    }",
    "  }",
    "]"
  ],
  "formatterJson": [
    "[",
    "  {",
    "    \\"fileName\\": \\"dir/about.md\\",",
    "    \\"lineNumber\\": 1,",
    "    \\"ruleNames\\": [",
    "      \\"MD021\\",",
    "      \\"no-multiple-space-closed-atx\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"Multiple spaces inside hashes on closed atx style heading\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md021.md\\",",
    "    \\"errorDetail\\": null,",
    "    \\"errorContext\\": \\"#  About  #\\",",
    "    \\"errorRange\\": [",
    "      3,",
    "      1",
    "    ],",
    "    \\"fixInfo\\": {",
    "      \\"editColumn\\": 3,",
    "      \\"deleteCount\\": 1",
    "    },",
    "    \\"severity\\": \\"error\\"",
    "  },",
    "  {",
    "    \\"fileName\\": \\"dir/about.md\\",",
    "    \\"lineNumber\\": 1,",
    "    \\"ruleNames\\": [",
    "      \\"MD021\\",",
    "      \\"no-multiple-space-closed-atx\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"Multiple spaces inside hashes on closed atx style heading\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md021.md\\",",
    "    \\"errorDetail\\": null,",
    "    \\"errorContext\\": \\"#  About  #\\",",
    "    \\"errorRange\\": [",
    "      10,",
    "      1",
    "    ],",
    "    \\"fixInfo\\": {",
    "      \\"editColumn\\": 10,",
    "      \\"deleteCount\\": 1",
    "    },",
    "    \\"severity\\": \\"error\\"",
    "  },",
    "  {",
    "    \\"fileName\\": \\"dir/about.md\\",",
    "    \\"lineNumber\\": 4,",
    "    \\"ruleNames\\": [",
    "      \\"MD032\\",",
    "      \\"blanks-around-lists\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"Lists should be surrounded by blank lines\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md032.md\\",",
    "    \\"errorDetail\\": null,",
    "    \\"errorContext\\": \\"1. List\\",",
    "    \\"errorRange\\": null,",
    "    \\"fixInfo\\": {",
    "      \\"insertText\\": \\"\\\\n\\"",
    "    },",
    "    \\"severity\\": \\"error\\"",
    "  },",
    "  {",
    "    \\"fileName\\": \\"dir/about.md\\",",
    "    \\"lineNumber\\": 5,",
    "    \\"ruleNames\\": [",
    "      \\"MD029\\",",
    "      \\"ol-prefix\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"Ordered list item prefix\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md029.md\\",",
    "    \\"errorDetail\\": \\"Expected: 2; Actual: 3; Style: 1/2/3\\",",
    "    \\"errorContext\\": null,",
    "    \\"errorRange\\": [",
    "      1,",
    "      3",
    "    ],",
    "    \\"fixInfo\\": {",
    "      \\"editColumn\\": 1,",
    "      \\"deleteCount\\": 1,",
    "      \\"insertText\\": \\"2\\"",
    "    },",
    "    \\"severity\\": \\"error\\"",
    "  },",
    "  {",
    "    \\"fileName\\": \\"dir/subdir/info.md\\",",
    "    \\"lineNumber\\": 1,",
    "    \\"ruleNames\\": [",
    "      \\"MD022\\",",
    "      \\"blanks-around-headings\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"Headings should be surrounded by blank lines\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md022.md\\",",
    "    \\"errorDetail\\": \\"Expected: 1; Actual: 0; Below\\",",
    "    \\"errorContext\\": \\"## Information\\",",
    "    \\"errorRange\\": null,",
    "    \\"fixInfo\\": {",
    "      \\"lineNumber\\": 2,",
    "      \\"insertText\\": \\"\\\\n\\"",
    "    },",
    "    \\"severity\\": \\"error\\"",
    "  },",
    "  {",
    "    \\"fileName\\": \\"dir/subdir/info.md\\",",
    "    \\"lineNumber\\": 1,",
    "    \\"ruleNames\\": [",
    "      \\"MD041\\",",
    "      \\"first-line-heading\\",",
    "      \\"first-line-h1\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"First line in a file should be a top-level heading\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md041.md\\",",
    "    \\"errorDetail\\": null,",
    "    \\"errorContext\\": \\"## Information\\",",
    "    \\"errorRange\\": null,",
    "    \\"fixInfo\\": null,",
    "    \\"severity\\": \\"error\\"",
    "  },",
    "  {",
    "    \\"fileName\\": \\"dir/subdir/info.md\\",",
    "    \\"lineNumber\\": 2,",
    "    \\"ruleNames\\": [",
    "      \\"MD038\\",",
    "      \\"no-space-in-code\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"Spaces inside code span elements\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md038.md\\",",
    "    \\"errorDetail\\": null,",
    "    \\"errorContext\\": \\"\` code1\`\\",",
    "    \\"errorRange\\": [",
    "      7,",
    "      1",
    "    ],",
    "    \\"fixInfo\\": {",
    "      \\"editColumn\\": 7,",
    "      \\"deleteCount\\": 1",
    "    },",
    "    \\"severity\\": \\"error\\"",
    "  },",
    "  {",
    "    \\"fileName\\": \\"dir/subdir/info.md\\",",
    "    \\"lineNumber\\": 2,",
    "    \\"ruleNames\\": [",
    "      \\"MD038\\",",
    "      \\"no-space-in-code\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"Spaces inside code span elements\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md038.md\\",",
    "    \\"errorDetail\\": null,",
    "    \\"errorContext\\": \\"\`code2 \`\\",",
    "    \\"errorRange\\": [",
    "      26,",
    "      1",
    "    ],",
    "    \\"fixInfo\\": {",
    "      \\"editColumn\\": 26,",
    "      \\"deleteCount\\": 1",
    "    },",
    "    \\"severity\\": \\"error\\"",
    "  },",
    "  {",
    "    \\"fileName\\": \\"dir/subdir/info.md\\",",
    "    \\"lineNumber\\": 4,",
    "    \\"ruleNames\\": [",
    "      \\"MD012\\",",
    "      \\"no-multiple-blanks\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"Multiple consecutive blank lines\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md012.md\\",",
    "    \\"errorDetail\\": \\"Expected: 1; Actual: 2\\",",
    "    \\"errorContext\\": null,",
    "    \\"errorRange\\": null,",
    "    \\"fixInfo\\": {",
    "      \\"deleteCount\\": -1",
    "    },",
    "    \\"severity\\": \\"error\\"",
    "  },",
    "  {",
    "    \\"fileName\\": \\"viewme.md\\",",
    "    \\"lineNumber\\": 3,",
    "    \\"ruleNames\\": [",
    "      \\"MD009\\",",
    "      \\"no-trailing-spaces\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"Trailing spaces\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md009.md\\",",
    "    \\"errorDetail\\": \\"Expected: 0 or 2; Actual: 1\\",",
    "    \\"errorContext\\": null,",
    "    \\"errorRange\\": [",
    "      10,",
    "      1",
    "    ],",
    "    \\"fixInfo\\": {",
    "      \\"editColumn\\": 10,",
    "      \\"deleteCount\\": 1",
    "    },",
    "    \\"severity\\": \\"error\\"",
    "  },",
    "  {",
    "    \\"fileName\\": \\"viewme.md\\",",
    "    \\"lineNumber\\": 5,",
    "    \\"ruleNames\\": [",
    "      \\"MD012\\",",
    "      \\"no-multiple-blanks\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"Multiple consecutive blank lines\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md012.md\\",",
    "    \\"errorDetail\\": \\"Expected: 1; Actual: 2\\",",
    "    \\"errorContext\\": null,",
    "    \\"errorRange\\": null,",
    "    \\"fixInfo\\": {",
    "      \\"deleteCount\\": -1",
    "    },",
    "    \\"severity\\": \\"error\\"",
    "  },",
    "  {",
    "    \\"fileName\\": \\"viewme.md\\",",
    "    \\"lineNumber\\": 6,",
    "    \\"ruleNames\\": [",
    "      \\"MD025\\",",
    "      \\"single-title\\",",
    "      \\"single-h1\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"Multiple top-level headings in the same document\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md025.md\\",",
    "    \\"errorDetail\\": null,",
    "    \\"errorContext\\": \\"Description\\",",
    "    \\"errorRange\\": null,",
    "    \\"fixInfo\\": null,",
    "    \\"severity\\": \\"error\\"",
    "  },",
    "  {",
    "    \\"fileName\\": \\"viewme.md\\",",
    "    \\"lineNumber\\": 12,",
    "    \\"ruleNames\\": [",
    "      \\"MD019\\",",
    "      \\"no-multiple-space-atx\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"Multiple spaces after hash on atx style heading\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md019.md\\",",
    "    \\"errorDetail\\": null,",
    "    \\"errorContext\\": \\"##  Summary\\",",
    "    \\"errorRange\\": [",
    "      4,",
    "      1",
    "    ],",
    "    \\"fixInfo\\": {",
    "      \\"editColumn\\": 4,",
    "      \\"deleteCount\\": 1",
    "    },",
    "    \\"severity\\": \\"error\\"",
    "  },",
    "  {",
    "    \\"fileName\\": \\"viewme.md\\",",
    "    \\"lineNumber\\": 14,",
    "    \\"ruleNames\\": [",
    "      \\"MD047\\",",
    "      \\"single-trailing-newline\\"",
    "    ],",
    "    \\"ruleDescription\\": \\"Files should end with a single newline character\\",",
    "    \\"ruleInformation\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md047.md\\",",
    "    \\"errorDetail\\": null,",
    "    \\"errorContext\\": null,",
    "    \\"errorRange\\": [",
    "      14,",
    "      1",
    "    ],",
    "    \\"fixInfo\\": {",
    "      \\"editColumn\\": 15,",
    "      \\"insertText\\": \\"\\\\n\\"",
    "    },",
    "    \\"severity\\": \\"error\\"",
    "  }",
    "]"
  ],
  "formatterJunit": [
    "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>",
    "<testsuites tests=\\"14\\" failures=\\"14\\" errors=\\"0\\" skipped=\\"0\\">",
    "  <testsuite name=\\"markdownlint-cli2-formatter-junit\\" time=\\"0\\" tests=\\"14\\" failures=\\"14\\" errors=\\"0\\" skipped=\\"0\\">",
    "    <testcase classname=\\"dir/about.md\\" name=\\"MD021/no-multiple-space-closed-atx\\" time=\\"0\\">",
    "      <failure message=\\"Multiple spaces inside hashes on closed atx style heading\\"><![CDATA[Line 1, Column 3, Context: \\"#  About  #\\"]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"dir/about.md\\" name=\\"MD021/no-multiple-space-closed-atx\\" time=\\"0\\">",
    "      <failure message=\\"Multiple spaces inside hashes on closed atx style heading\\"><![CDATA[Line 1, Column 10, Context: \\"#  About  #\\"]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"dir/about.md\\" name=\\"MD032/blanks-around-lists\\" time=\\"0\\">",
    "      <failure message=\\"Lists should be surrounded by blank lines\\"><![CDATA[Line 4, Context: \\"1. List\\"]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"dir/about.md\\" name=\\"MD029/ol-prefix\\" time=\\"0\\">",
    "      <failure message=\\"Ordered list item prefix\\"><![CDATA[Line 5, Column 1, Expected: 2; Actual: 3; Style: 1/2/3]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"dir/subdir/info.md\\" name=\\"MD022/blanks-around-headings\\" time=\\"0\\">",
    "      <failure message=\\"Headings should be surrounded by blank lines\\"><![CDATA[Line 1, Expected: 1; Actual: 0; Below, Context: \\"## Information\\"]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"dir/subdir/info.md\\" name=\\"MD041/first-line-heading/first-line-h1\\" time=\\"0\\">",
    "      <failure message=\\"First line in a file should be a top-level heading\\"><![CDATA[Line 1, Context: \\"## Information\\"]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"dir/subdir/info.md\\" name=\\"MD038/no-space-in-code\\" time=\\"0\\">",
    "      <failure message=\\"Spaces inside code span elements\\"><![CDATA[Line 2, Column 7, Context: \\"\` code1\`\\"]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"dir/subdir/info.md\\" name=\\"MD038/no-space-in-code\\" time=\\"0\\">",
    "      <failure message=\\"Spaces inside code span elements\\"><![CDATA[Line 2, Column 26, Context: \\"\`code2 \`\\"]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"dir/subdir/info.md\\" name=\\"MD012/no-multiple-blanks\\" time=\\"0\\">",
    "      <failure message=\\"Multiple consecutive blank lines\\"><![CDATA[Line 4, Expected: 1; Actual: 2]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"viewme.md\\" name=\\"MD009/no-trailing-spaces\\" time=\\"0\\">",
    "      <failure message=\\"Trailing spaces\\"><![CDATA[Line 3, Column 10, Expected: 0 or 2; Actual: 1]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"viewme.md\\" name=\\"MD012/no-multiple-blanks\\" time=\\"0\\">",
    "      <failure message=\\"Multiple consecutive blank lines\\"><![CDATA[Line 5, Expected: 1; Actual: 2]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"viewme.md\\" name=\\"MD025/single-title/single-h1\\" time=\\"0\\">",
    "      <failure message=\\"Multiple top-level headings in the same document\\"><![CDATA[Line 6, Context: \\"Description\\"]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"viewme.md\\" name=\\"MD019/no-multiple-space-atx\\" time=\\"0\\">",
    "      <failure message=\\"Multiple spaces after hash on atx style heading\\"><![CDATA[Line 12, Column 4, Context: \\"##  Summary\\"]]></failure>",
    "    </testcase>",
    "    <testcase classname=\\"viewme.md\\" name=\\"MD047/single-trailing-newline\\" time=\\"0\\">",
    "      <failure message=\\"Files should end with a single newline character\\"><![CDATA[Line 14, Column 14]]></failure>",
    "    </testcase>",
    "  </testsuite>",
    "</testsuites>"
  ],
  "formatterSarif": [
    "{",
    "  \\"$schema\\": \\"https://json.schemastore.org/sarif-2.1.0.json\\",",
    "  \\"version\\": \\"2.1.0\\",",
    "  \\"runs\\": [",
    "    {",
    "      \\"tool\\": {",
    "        \\"driver\\": {",
    "          \\"name\\": \\"markdownlint-cli2\\",",
    "          \\"version\\": \\"0.0.4\\",",
    "          \\"informationUri\\": \\"https://github.com/DavidAnson/markdownlint-cli2\\",",
    "          \\"rules\\": [",
    "            {",
    "              \\"id\\": \\"MD021\\",",
    "              \\"name\\": \\"Md021NoMultipleSpaceClosedAtx\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Multiple spaces inside hashes on closed atx style heading\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Multiple spaces inside hashes on closed atx style heading\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md021.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD032\\",",
    "              \\"name\\": \\"Md032BlanksAroundLists\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Lists should be surrounded by blank lines\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Lists should be surrounded by blank lines\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md032.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD029\\",",
    "              \\"name\\": \\"Md029OlPrefix\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Ordered list item prefix\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Ordered list item prefix\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md029.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD022\\",",
    "              \\"name\\": \\"Md022BlanksAroundHeadings\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Headings should be surrounded by blank lines\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Headings should be surrounded by blank lines\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md022.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD041\\",",
    "              \\"name\\": \\"Md041FirstLineHeadingFirstLineH1\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"First line in a file should be a top-level heading\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"First line in a file should be a top-level heading\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md041.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD038\\",",
    "              \\"name\\": \\"Md038NoSpaceInCode\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Spaces inside code span elements\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Spaces inside code span elements\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md038.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD012\\",",
    "              \\"name\\": \\"Md012NoMultipleBlanks\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Multiple consecutive blank lines\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Multiple consecutive blank lines\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md012.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD009\\",",
    "              \\"name\\": \\"Md009NoTrailingSpaces\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Trailing spaces\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Trailing spaces\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md009.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD025\\",",
    "              \\"name\\": \\"Md025SingleTitleSingleH1\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Multiple top-level headings in the same document\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Multiple top-level headings in the same document\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md025.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD019\\",",
    "              \\"name\\": \\"Md019NoMultipleSpaceAtx\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Multiple spaces after hash on atx style heading\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Multiple spaces after hash on atx style heading\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md019.md\\"",
    "            },",
    "            {",
    "              \\"id\\": \\"MD047\\",",
    "              \\"name\\": \\"Md047SingleTrailingNewline\\",",
    "              \\"shortDescription\\": {",
    "                \\"text\\": \\"Files should end with a single newline character\\"",
    "              },",
    "              \\"fullDescription\\": {",
    "                \\"text\\": \\"Files should end with a single newline character\\"",
    "              },",
    "              \\"helpUri\\": \\"https://github.com/DavidAnson/markdownlint/blob/vX.Y.Z/doc/md047.md\\"",
    "            }",
    "          ]",
    "        }",
    "      },",
    "      \\"results\\": [",
    "        {",
    "          \\"ruleId\\": \\"MD021\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Multiple spaces inside hashes on closed atx style heading, Context: \\\\\\"#  About  #\\\\\\"\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"dir/about.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 1,",
    "                  \\"endLine\\": 1,",
    "                  \\"startColumn\\": 3,",
    "                  \\"endColumn\\": 4",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD021\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Multiple spaces inside hashes on closed atx style heading, Context: \\\\\\"#  About  #\\\\\\"\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"dir/about.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 1,",
    "                  \\"endLine\\": 1,",
    "                  \\"startColumn\\": 10,",
    "                  \\"endColumn\\": 11",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD032\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Lists should be surrounded by blank lines, Context: \\\\\\"1. List\\\\\\"\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"dir/about.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 4,",
    "                  \\"endLine\\": 4",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD029\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Ordered list item prefix, Expected: 2; Actual: 3; Style: 1/2/3\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"dir/about.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 5,",
    "                  \\"endLine\\": 5,",
    "                  \\"startColumn\\": 1,",
    "                  \\"endColumn\\": 4",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD022\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Headings should be surrounded by blank lines, Expected: 1; Actual: 0; Below, Context: \\\\\\"## Information\\\\\\"\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"dir/subdir/info.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 1,",
    "                  \\"endLine\\": 1",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD041\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"First line in a file should be a top-level heading, Context: \\\\\\"## Information\\\\\\"\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"dir/subdir/info.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 1,",
    "                  \\"endLine\\": 1",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD038\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Spaces inside code span elements, Context: \\\\\\"\` code1\`\\\\\\"\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"dir/subdir/info.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 2,",
    "                  \\"endLine\\": 2,",
    "                  \\"startColumn\\": 7,",
    "                  \\"endColumn\\": 8",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD038\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Spaces inside code span elements, Context: \\\\\\"\`code2 \`\\\\\\"\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"dir/subdir/info.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 2,",
    "                  \\"endLine\\": 2,",
    "                  \\"startColumn\\": 26,",
    "                  \\"endColumn\\": 27",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD012\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Multiple consecutive blank lines, Expected: 1; Actual: 2\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"dir/subdir/info.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 4,",
    "                  \\"endLine\\": 4",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD009\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Trailing spaces, Expected: 0 or 2; Actual: 1\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"viewme.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 3,",
    "                  \\"endLine\\": 3,",
    "                  \\"startColumn\\": 10,",
    "                  \\"endColumn\\": 11",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD012\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Multiple consecutive blank lines, Expected: 1; Actual: 2\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"viewme.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 5,",
    "                  \\"endLine\\": 5",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD025\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Multiple top-level headings in the same document, Context: \\\\\\"Description\\\\\\"\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"viewme.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 6,",
    "                  \\"endLine\\": 6",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD019\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Multiple spaces after hash on atx style heading, Context: \\\\\\"##  Summary\\\\\\"\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"viewme.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 12,",
    "                  \\"endLine\\": 12,",
    "                  \\"startColumn\\": 4,",
    "                  \\"endColumn\\": 5",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        },",
    "        {",
    "          \\"ruleId\\": \\"MD047\\",",
    "          \\"message\\": {",
    "            \\"text\\": \\"Files should end with a single newline character\\"",
    "          },",
    "          \\"locations\\": [",
    "            {",
    "              \\"physicalLocation\\": {",
    "                \\"artifactLocation\\": {",
    "                  \\"uri\\": \\"viewme.md\\"",
    "                },",
    "                \\"region\\": {",
    "                  \\"startLine\\": 14,",
    "                  \\"endLine\\": 14,",
    "                  \\"startColumn\\": 14,",
    "                  \\"endColumn\\": 15",
    "                }",
    "              }",
    "            }",
    "          ],",
    "          \\"level\\": \\"error\\"",
    "        }",
    "      ]",
    "    }",
    "  ]",
    "}"
  ]
}
`;

exports[`markdownlint-cli2-test-exec.mjs > outputFormatters-missing (exec) 1`] = `
{
  "exitCode": 2,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: .*",
    "Linting: 1 file(s)",
    "Summary: 0 error(s)"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > package-json-fix (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 1 error(s)"
  ],
  "stderr": [
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > pyproject-toml-fix (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Linting: 3 file(s)",
    "Summary: 1 error(s)"
  ],
  "stderr": [
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > showFound (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: **/*.md",
    "Found:",
    " dir/about.md",
    " dir/subdir/info.md",
    " dir/subdir2/info.md",
    " viewme.md",
    "Linting: 4 file(s)",
    "Summary: 7 error(s)"
  ],
  "stderr": [
    "dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "dir/subdir2/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;

exports[`markdownlint-cli2-test-exec.mjs > sibling-directory-options (exec) 1`] = `
{
  "exitCode": 1,
  "stdout": [
    "markdownlint-cli2 vX.Y.Z (markdownlint vX.Y.Z)",
    "Finding: ../no-config/**/*.md",
    "Linting: 3 file(s)",
    "Summary: 10 error(s)"
  ],
  "stderr": [
    "../no-config/dir/about.md:1:3 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "../no-config/dir/about.md:1:10 error MD021/no-multiple-space-closed-atx Multiple spaces inside hashes on closed atx style heading [Context: \\"#  About  #\\"]",
    "../no-config/dir/about.md:5:1 error MD029/ol-prefix Ordered list item prefix [Expected: 2; Actual: 3; Style: 1/2/3]",
    "../no-config/dir/subdir/info.md:1 error MD022/blanks-around-headings Headings should be surrounded by blank lines [Expected: 1; Actual: 0; Below] [Context: \\"## Information\\"]",
    "../no-config/dir/subdir/info.md:2:7 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\` code1\`\\"]",
    "../no-config/dir/subdir/info.md:2:26 error MD038/no-space-in-code Spaces inside code span elements [Context: \\"\`code2 \`\\"]",
    "../no-config/viewme.md:3:10 error MD009/no-trailing-spaces Trailing spaces [Expected: 0 or 2; Actual: 1]",
    "../no-config/viewme.md:6 error MD025/single-title/single-h1 Multiple top-level headings in the same document [Context: \\"Description\\"]",
    "../no-config/viewme.md:12:4 error MD019/no-multiple-space-atx Multiple spaces after hash on atx style heading [Context: \\"##  Summary\\"]",
    "../no-config/viewme.md:14:14 error MD047/single-trailing-newline Files should end with a single newline character"
  ],
  "formatterCodeQuality": [],
  "formatterJson": [],
  "formatterJunit": [],
  "formatterSarif": []
}
`;
